kube/deployment-back.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autex-back
  namespace: autex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autex-back
  template:
    metadata:
      labels:
        app: autex-back
    spec:
      containers:
      - name: autex-back
        image: vasiliylu/autex-back
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
          - name: autex-storage
            mountPath: /data/db 
      volumes:
        - name: autex-storage
          persistentVolumeClaim:
            claimName: autex-storage-claim
