kube/services.yml
apiVersion: v1
kind: Service
metadata:
  name: autex-back
  namespace: autex
spec:
  type: NodePort
  ports:
    - port: 8081
      targetPort: 80
  selector:
    app: autex-back
---
apiVersion: v1
kind: Service
metadata:
  name: autex-front
  namespace: autex
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 80
  selector:
    app: autex-front
