kube/deployment-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autex-front-ingress
  namespace: autex
  annotations:
    traefik.ingress.kubernetes.io/priority: "300"
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: autex.wmxsoft.ru
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: autex-front
            port: 
              number: 8080   
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autex-back-ingress
  namespace: autex
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/priority: "400"
spec:
  rules:
  - host: autex.wmxsoft.ru
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: autex-back
            port: 
              number: 8081
